<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Naj Autoškola</string>
    <string name="copyright">©2015 Spiracle Studios</string>

    <!-- Activity and navigation drawer titles -->
    <string name="title_test">Test</string>
    <string name="title_testy">Testy</string>
    <string name="title_noviny">Noviny</string>
    <string name="title_dopravne_znacky">Dopravné Značky</string>
    <string name="title_vyhlaska">Vyhláška</string>
    <string name="title_najst_autoskolu">Nájsť Autoškolu</string>
    <string name="title_nastavenia">Nastavenia</string>
    <string name="title_pomoc_a_odozva">Pomoc a Odozva</string>
    <string name="title_o_aplikacii">O Aplikácii</string>
    <string name="title_dev_tools">Developer Tools</string>
    <string name="title_znacka_list">Znacky</string>
    <string name="title_znacka_detail">Znacka Detail</string>

    <!-- Actions -->
    <string name="action_vyhlaska">Vyhláška</string>
    <string name="action_send">Odoslať</string>
    <string name="action_stars">Hviezdy</string>

    <!-- Menus -->
    <string name="item_correct_answers">Správne odpovede</string>
    <string name="item_history">História</string>

    <!-- Content text -->
    <string name="group_ab">Skupina A,B</string>
    <string name="group_cdt">Skupina C,D,T</string>
    <string name="questions">Otázky</string>
    <string name="road_signs">Dopravné značky</string>
    <string name="intersections">Križovatky</string>
    <string name="begin_test">ZAČAT TEST</string>
    <string name="dokoncene">dokončené</string>
    <string name="point">bod</string>
    <string name="points">body</string>
    <string name="correct_answers_caps">SPRÁVNE ODPOVEDE</string>

    <!-- Feedback Activity -->
    <string name="send_a_suggestion">Zaslať návrh</string>
    <string name="report_a_bug">Oznámiť chybu</string>
    <string name="help">Pomoc</string>
    <string name="send_feedback_chooser_title">Zvoľte vašu mailovú aplikáciu:</string>
    <string name="send_feedback_subject_feedback">Feedback</string>
    <string name="send_feedback_subject_bug">Bug Report</string>
    <string name="send_system_info">Poslať údaje o zariadený</string>
    <string name="send_system_info_summary">model, verzia androidu, atď.</string>
    <string name="send_feedback_disclaimer">Na odosielanie odozvy používame email. Ked stlačíte tlačidlo \'odoslať\', tak sa spustí vaša mailová aplikácia (napr. gmail) v ktorej stačí už len stlačiť \'odoslať.</string>

    <!-- Dialog text -->
    <string name="dialog_test_options_title">Možnosti</string>

    <string name="dialog_about_version">Verzia %1$s</string>

    <string name="dialog_system_info_preview_title">Prehľad odoslaných údajov</string>

    <!-- Toast text -->
    <string name="toast_app_is_in_development">Aplikácia je aktuálne vo vývoji!</string>
    <string name="toast_not_yet_implemented">Aktuálne vo vývoji.</string>
    <string name="toast_restart_app">Aplikáciu treba reštartovať</string>
    <string name="toast_test_is_empty">Tento test neobsahuje žiadne otázky</string>
    <string name="toast_link_was_copied">Odkaz bol skopírovaný</string>
    <string name="toast_connect_to_internet">Pripojte sa na internet!</string>
    <string name="toast_enter_a_message">Zadajte správu</string>
    <string name="toast_subscribe_subscribing">Prihlasuje sa odber…</string>
    <string name="toast_subscribe_success">Úspešne prihlásený na odber</string>
    <string name="toast_subscribe_failure">Chyba pri prihlasovaný na odber</string>

    <!-- Hints -->
    <string name="hint_enter_your_feedback">Vaša správa</string>
    <string name="hint_email">Email (povinné)</string>
    <string name="hint_first_name">Krstné meno</string>
    <string name="hint_last_name">Priezvisko</string>
    <string name="hint_dont_want_to_provide">Nezverejniť</string>

    <!-- Errors (EditText, etc) -->
    <string name="error_enter_an_email">Zadajte email</string>
    <string name="error_connect_to_the_internet">Pripojte sa k internetu.</string>

    <!-- Intro Slides -->
    <string name="intro_subscribe_title">Odber</string>
    <string name="intro_subscribe_subtitle">Chcete vedieť, kedy vyjde nová verzia aplikácie?\nPrihláste sa na odber!</string>
    <string name="intro_subscribe_subscribe">Odoberať</string>

    <string name="intro_ads_title">Reklamy</string>
    <string name="intro_ads_subtitle">Táto aplikácia zobrazuje reklamy. Nevadilo by vám poskytnúť niektoré základné informácie o vás aby ste dostávali relevantnejšie reklamy?</string>
    <string name="intro_ads_save">Uložiť</string>
    <string name="intro_ads_gender">Pohlavie:</string>
    <string name="intro_ads_birth_year">Rok narodenia:</string>

    <string-array name="intro_ads_list_genders">
        <item>Nezverejniť</item>
        <item>Muž</item>
        <item>Žena</item>
    </string-array>
    <string-array name="intro_ads_list_country">
        <item>Nezverejniť</item>
        <item>Slovensko</item>
        <item>Zahraničie</item>
    </string-array>

    <!-- Introductory tutorial -->
    <string name="showcase_stars">Hviezdy</string>
    <string name="showcase_stars_content">Za každý úspešný test získate hviezdy ktoré môžete vymeniť za nové vzhlady aplikácie, atď.</string>

    <!-- Content description -->
    <string name="cd_navigation_drawer_open">Otvoriť navigačný panel</string>
    <string name="cd_navigation_drawer_close">Zatvoriť navigačný panel</string>
    <string name="cd_expand_icon">Zobraziť viac/menej</string>
    <string name="cd_nahodny_test_icon">Začať náhodný test</string>
    <string name="cd_preview_system_info">Prezrieť odoslané údaje</string>
    <string name="cd_social_web">Web</string>
    <string name="cd_social_facebook">Facebook</string>
    <string name="cd_social_twitter">Twitter</string>
    <string name="cd_social_youtube">Youtube</string>
    <string name="cd_social_google_play">Google Play</string>

    <!-- Data strings -->
    <string name="banner_ad_unit_id">ca-app-pub-7362127401681337/9720209806</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Všeobecné</string>
    <string name="pref_header_appearance">Vzhľad</string>

    <string name="pref_title_night_theme">Nočná téma</string>
    <string name="pref_title_keep_screen_on">Nezhasínať obrazovku</string>
    <string name="pref_description_keep_screen_on">Ponechá obrazovku zapnutú počas robenia testov</string>

    <string name="pref_title_amoled_mode">AMOLED mód</string>
    <string name="pref_description_amoled_mode">Spolu z nočnou témou šetrý batériu tak že
        čierne časti obrazovky vôbec nepodsvietuje
    </string>

    <!--<string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>-->

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>-->

    <!-- Example settings for Data & Sync -->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>-->

    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
