<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.spiraclestudios.autoskola.Fragments.SendFeedbackActivityFragment">

    <!-- Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/feedback_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_enter_your_feedback"
            android:inputType="textMultiLine"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/send_system_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/send_system_info"/>

            <ImageButton
                android:id="@+id/preview_system_info"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_toEndOf="@id/send_system_info"
                android:layout_toRightOf="@id/send_system_info"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/cd_preview_system_info"
                android:src="@drawable/ic_remove_red_eye_black_24dp"
                android:background="@null"/>

        </RelativeLayout>

        <!-- Separator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:background="@color/grey_300"/>

        <TextView
            android:id="@+id/send_feedback_disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/send_feedback_disclaimer"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_send_black_24dp"
        app:backgroundTint="?attr/colorFloatingActionButton"
        app:elevation="4dp"/>

</android.support.design.widget.CoordinatorLayout>
